--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
         android:id="@+id/letter_1"
         android:layout_width="50dp"
         android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/padding_default"
+        android:layout_marginTop="@dimen/padding_default"
         android:fontFamily="serif-monospace"
         android:gravity="center"
         android:maxLength="1"
@@ -22,7 +22,7 @@
         android:id="@+id/row_1"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/padding_default"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@id/letter_1"
         app:layout_constraintTop_toTopOf="parent">
@@ -123,7 +123,7 @@
         android:id="@+id/go"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/padding_default"
         android:text="@string/action_go"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/row_2" />
