--- a/app/src/main/res/layout/item_definition.xml
+++ b/app/src/main/res/layout/item_definition.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingVertical="8dp"
-    android:paddingHorizontal="16dp">
+    android:paddingVertical="@dimen/padding_small"
+    android:paddingHorizontal="@dimen/padding_default">
 
     <TextView
         android:id="@+id/definition_type"
@@ -20,7 +20,7 @@
         style="@style/TextAppearance.MaterialComponents.Body2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/padding_small"
         tools:text="A very long definition goes here..." />
 
 </LinearLayout>
