--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,111 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/letter_1"
-        android:layout_width="50dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="@dimen/padding_default"
-        android:layout_marginTop="@dimen/padding_default"
-        android:fontFamily="serif-monospace"
-        android:gravity="center"
-        android:maxLength="1"
-        android:text="T"
-        app:layout_constraintStart_toStartOf="parent"
+    <com.github.mrbean355.witnesswords.LetterInputWidget
+        android:id="@+id/letter_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/padding_default"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/row_1"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="@dimen/padding_default"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toEndOf="@id/letter_1"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/letter_2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="T" />
-
-        <EditText
-            android:id="@+id/letter_3"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="C" />
-
-        <EditText
-            android:id="@+id/letter_4"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="A" />
-
-        <EditText
-            android:id="@+id/letter_5"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="P" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/row_2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toEndOf="@id/letter_1"
-        app:layout_constraintTop_toBottomOf="@id/row_1">
-
-        <EditText
-            android:id="@+id/letter_6"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="I" />
-
-        <EditText
-            android:id="@+id/letter_7"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="I" />
-
-        <EditText
-            android:id="@+id/letter_8"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="O" />
-
-        <EditText
-            android:id="@+id/letter_9"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:fontFamily="serif-monospace"
-            android:gravity="center"
-            android:maxLength="1"
-            android:text="R" />
-
-    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -123,10 +24,11 @@
         android:id="@+id/go"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_small"
         android:layout_marginEnd="@dimen/padding_default"
         android:text="@string/action_go"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/row_2" />
+        app:layout_constraintTop_toBottomOf="@id/letter_input" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/results"
