--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.LetterInput" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/padding_default</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@drawable/outline</item>
+    </style>
+
 </resources>
