--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,53 +13,43 @@
         android:layout_margin="@dimen/padding_default"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_small"
+        android:indeterminate="true"
+        app:layout_constraintTop_toBottomOf="@id/letter_input" />
+
     <TextView
         android:id="@+id/result_count"
         style="@style/TextAppearance.MaterialComponents.Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_default"
-        app:layout_constraintBottom_toBottomOf="@id/go"
+        app:layout_constraintBottom_toBottomOf="@id/show_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/go"
+        app:layout_constraintTop_toTopOf="@id/show_button"
         tools:text="Found 123 words" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/go"
-        app:layout_constraintEnd_toStartOf="@id/go"
-        app:layout_constraintTop_toTopOf="@id/go" />
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/go"
+        android:id="@+id/show_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_small"
         android:layout_marginEnd="@dimen/padding_default"
-        android:text="@string/action_go"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/letter_input" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/show"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_default"
         android:text="@string/action_show"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/result_count"
-        tools:visibility="visible" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progress_indicator" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/results"
+        android:id="@+id/results_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/go" />
+        app:layout_constraintTop_toBottomOf="@id/show_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
