--- a/app/src/main/res/layout/widget_letter_input.xml
+++ b/app/src/main/res/layout/widget_letter_input.xml
@@ -21,6 +21,7 @@
         android:id="@+id/letter_1"
         style="@style/AppTheme.LetterInput"
         android:layout_height="0dp"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="@id/letter_6"
         app:layout_constraintEnd_toStartOf="@id/letter_2"
         app:layout_constraintStart_toStartOf="parent"
