Update primary colour to correct Witness colour

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C62828</color>
-    <color name="colorPrimaryDark">#8E0000</color>
+    <color name="colorPrimary">#DA0019</color>
+    <color name="colorPrimaryDark">#980011</color>
     <color name="colorAccent">#FFEB3B</color>
 </resources>
