--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.github.mrbean355.witnesswords.LetterInputWidget
+    <com.github.mrbean355.witnesswords.core.LetterInputWidget
         android:id="@+id/letter_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
